--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,13 +25,18 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies with Make
       run: |
-        make install
+        python3 -m venv venv
+        . venv/bin/activate
+        pip3 install --upgrade pip
+        pip3 install -r requirements.txt
     - name: Run server with Make and sleep
       run: |
+        . venv/bin/activate
         make run &
         sleep 10
     - name: Test with pytest
       run: |
+        . venv/bin/activate
         pytest
     - name: Lint with flake8
       run: |
