--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,13 +34,6 @@ jobs:
         . venv/bin/activate
         make run &
         sleep 10
-    - name: Test with pytest
+    - name: Verify server is running
       run: |
-        . venv/bin/activate
-        pytest
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        curl --fail http://localhost:3000 || exit 1
