--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,22 +1,16 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 permissions:
   contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python 3.10
@@ -25,19 +19,17 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies with Make
       run: |
-        python3 -m venv venv
-        . venv/bin/activate
-        pip3 install --upgrade pip
-        pip3 install -r requirements.txt
+        make install
     - name: Run server with Make and sleep
       run: |
-        . venv/bin/activate
-        make run > server_log.txt 2>&1 &
-        sleep 30
-    - name: Print server log
-      run: cat server_log.txt
-    - name: Verify server is running
+        make run &
+        sleep 20
+    - name: Test with pytest
       run: |
-        curl --fail http://localhost:3000 || exit 1
-  
-
+        pytest
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
